@@ -12,6 +12,7 @@ gv_intern_res_unix.dat
 gv_intern_res_unix.h
 gv_make_res.dat
 gv_spartan.h
+gv_widgetless.h
 gv_system.ad
 gv_user.ad
 stamp-h1
